--- a/screens/index.html
+++ b/screens/index.html
@@ -380,14 +380,18 @@
     </footer>
   </main>
   <script src="../assets/src/index.js"></script>
-  <script src="../assets/styles/style.js"></script>
+  <!-- <script src="../assets/styles/style.js"></script> -->
   <script>
 
-    fetch('http://localhost:3333/api/admin/professores').then(response => response.json()).then(json => console.log(json))    //imprimir dados no console
-      .catch(err => console.log('Erro de solicitação', err)); // lidar com os erros por catch
+    fetch('http://localhost:3333/api/admin/professores/')
+    .then(response => response.json())
+    .then((json) => {
+      let professores = [json.data]
+      console.log(professores)
+    }) 
+       //imprimir dados no console
+    .catch(err => console.error('Erro de solicitação', err)); // lidar com os erros por catch
   </script>
-
->>>>>>> d32ea5cd5fe9eb23ad2186853fbe750cd42982aa
 
 </body>
 
