--- a/screens/index.html
+++ b/screens/index.html
@@ -32,18 +32,17 @@
   </section>
   <header class="header-index">
     <nav id="nav">
-      <button id="btnMenu">
+      <ul id="menu">
+        <!-- <button id="btnMenu">
         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list"
           viewBox="0 0 16 16" id="hamburguer">
           <path fill-rule="evenodd"
             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
         </svg>
-      </button>
-      <ul id="menu">
+      </button> -->
         <div class="menuAbrir">
           <i class='bx bx-menu sidebarAbrir'></i>
           <div class="toggle">
-
             <i class='bx bx-x sidebarFechar'></i>
           </div>
           <li><a href='#mapa'>Calendário</a></li>
@@ -131,7 +130,9 @@
             <div class='card-polos'>
               <div class="titulo-card-polos">Polo 1</div>
               <div class="escolas-card-polos">E.M.E.F. Sirana Koukdjian</div>
+             
               <div class="escolas-card-polos">E.M.E.F Hortência Quintuno de Farias Botelho</div>
+        
               <div class="escolas-card-polos">E.M.E.F José Cesário Pereira Filho</div>
             </div>
             <div class='card-polos'>
@@ -176,7 +177,7 @@
             voluntário de aproximadamente 2 horas semanais, e assinamos a carga
             horária
           </p>
-          <a href="#participe" class="btn-p-main">Participe</a>
+          <a href="https://docs.google.com/forms/d/1JQhkp5-Ziy2IIltBlGBYS9K5gLwdko2_jF99L3R3ZTw/viewform?edit_requested=true" class="btn-p-main">Participe</a>
         </div>
         <img src="../assets/images/professor.png" height="200" alt="">
       </article>
@@ -207,7 +208,7 @@
 
       </article>
       <article class="apoiadores">
-        <div class="listTitle">Projeto Elaborado por:</div>
+        <div class="listTitle">Projeto apoioado por:</div>
         <div class="group-list">
           <div class="foto-card" id="priscila-eleuterio">
             <div class="nome-card">
@@ -380,17 +381,11 @@
     </footer>
   </main>
   <script src="../assets/src/index.js"></script>
-  <!-- <script src="../assets/styles/style.js"></script> -->
+  <script src="../assets/src/fetch.js"></script>
+  <script src="../assets/styles/style.js"></script>
   <script>
 
-    fetch('http://localhost:3333/api/admin/professores/')
-    .then(response => response.json())
-    .then((json) => {
-      let professores = [json.data]
-      console.log(professores)
-    }) 
-       //imprimir dados no console
-    .catch(err => console.error('Erro de solicitação', err)); // lidar com os erros por catch
+     // lidar com os erros por catch
   </script>
 
 </body>
